--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet"type="text/css" href="/static/css/index.css"> 
+  <link rel="stylesheet"type="text/css" href="/static/css/index.css">
+  <link rel="stylesheet"type="text/css" href="/static/css/login.css">  
   <title>台北一日遊</title>
 </head>
 <body>
@@ -15,12 +16,14 @@
       <nav>
           <ul class="header1_navbar">
             <li>預定行程</li>
-            <li>登入/註冊</li>
+            <li id="login_or_signout"></li>
           </ul>
       </nav>
     </div>
   </div>
 </header>
+
+<div class="login-popup"></div>
 
 <header class="header2_layout">
     <figure>
@@ -68,6 +71,7 @@
 
 <script type="module" src="/static/js/get_mrts.js"></script>
 <script type="module" src="/static/js/index.js"></script>
+<script src="/static/js/login.js"></script>
 
 </body>
 </html>
