--- a/static/attraction.html
+++ b/static/attraction.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet"type="text/css" href="/static/css/attraction.css">
-  <link rel="stylesheet"type="text/css" href="/static/css/login.css"> 
+  <link rel="stylesheet"type="text/css" href="/static/css/popup.css"> 
   <title>景點介紹</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <a class="header__title" href="/">台北一日遊</a>
         <nav class="header__navbar">
             <ul class="header__navbar-list">
-              <li class="header__navbar-item">預定行程</li>
+              <li class="header__navbar-item" id="booking_cart">預定行程</li>
               <li class="header__navbar-item" id="login_or_signout"></li>
             </ul>
         </nav>
@@ -45,12 +45,12 @@
             <div class="article__booking-container">
               <h3 class="article__booking-title">訂購導覽行程</h3>
               <p class="article__booking-description">以此景點為中心的一日行程，帶您探索城市角落故事</p>
-              <form>
+              <form id="booking_form"> 
 
                 <label class="article__form-label  article__form-label--date">
                   
                     <span class="article__form-text">選擇日期：</span> 
-                    <input type="date" name="date" required>
+                    <input type="date" name="date" required> 
 
                 </label>
 
@@ -71,7 +71,7 @@
                   <p class="article__fee-amount" id="fee_amount">新台幣 2000元</p>
                 </div>
 
-                <button class="article__form-button">開始預約行程</button>
+                <button class="article__form-button" id="sent_booking_button">開始預約行程</button>
                 
               </form>
             </div> 
@@ -97,8 +97,10 @@
     <div class="footer__copyright">COPYRIGHT © 2024 台北一日遊</div>
   </footer>
 
+  <script type="module" src="/static/js/popup.js"></script>
   <script type="module" src="/static/js/attraction.js"></script>
-  <script src="/static/js/login.js"></script>
+  
+
 
 </body>
 </html>
