--- a/static/booking.html
+++ b/static/booking.html
@@ -3,9 +3,129 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booking</title>
+  <link rel="stylesheet"type="text/css" href="/static/css/popup.css"> 
+  <link rel="stylesheet"type="text/css" href="/static/css/booking.css">
+  <title>預定行程</title>
 </head>
 <body>
-  
+
+  <header class="header">
+    <div class="header--fixed">
+      <div class="header__layout">
+        <a class="header__title" href="/">台北一日遊</a>
+        <nav class="header__navbar">
+            <ul class="header__navbar-list">
+              <li class="header__navbar-item" id="booking_cart">預定行程</li>
+              <li class="header__navbar-item" id="login_or_signout"></li>
+            </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <div class="login-popup"></div>
+
+  <main class="main" id="main">
+
+    <section class="booking-detail">
+
+        <h3 class="booking-detail__greeting">您好，<span id="booking_username"></span>，待預定的行程如下：</h3>
+
+        <article class="booking-detail__content">
+
+          <div class="booking-detail__image-container">
+            <img alt="Attraction Photo" class="booking-detail__image" id="booking_image">
+          </div>
+          
+          <div class="booking-detail__info"> 
+            <img src="/static/image/icon_delete.png" alt="Delete Icon" class="booking-detail__delete-icon" id="booking_delete_icon">
+            <h4 class="booking-detail__title">台北一日遊：<span id="booking_title"></span></h4>
+            <p class="booking-detail__item">日期：<span class="booking-detail__value" id="booking_date"></span></p>
+            <p class="booking-detail__item">時間：<span class="booking-detail__value" id="booking_time"></span></p>
+            <p class="booking-detail__item">費用：<span class="booking-detail__value" id="booking_cost"></span></p>
+            <p class="booking-detail__item">地點：<span class="booking-detail__value" id="booking_location"></span></p>
+          </div>
+          
+        </article>
+
+    </section>
+
+
+    <hr class="main__separator"/>
+
+    <section class="contact-info">
+        <h3 class="contact-info__title">您的聯絡資訊</h3>
+        <form>
+
+          <div class="contact-info__form-group">
+            <label class="contact-info__label">聯絡姓名：
+              <input class="contact-info__input" id="contact_username" type="text" required> 
+            </label>
+          </div>
+
+          <div class="contact-info__form-group">
+            <label class="contact-info__label">聯絡信箱：
+              <input class="contact-info__input" id="contact_email" type="email" required> 
+            </label>
+          </div>
+
+          <div class="contact-info__form-group">
+            <label class="contact-info__label">手機號碼：
+              <input class="contact-info__input" type="tel" required>
+            </label>
+          </div>
+
+        </form>
+
+        <p class="contact-info__note">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</p>
+
+    </section>
+
+    <hr class="main__separator"/>
+
+    <section class="payment-info">
+        <h3 class="payment-info__title">信用卡付款資訊</h3>
+        <form class="payment-info__form">
+
+          <div>
+
+            <label class="payment-info__label">卡片號碼：
+              <input class="payment-info__input" type="text" inputmode="numeric" placeholder="請輸入信用卡卡號" required>
+            </label>
+          </div>
+
+          <div>
+            <label class="payment-info__label">過期時間：
+              <input class="payment-info__input" type="text" inputmode="numeric" placeholder="MM / YY" required> 
+            </label>
+          </div>
+
+          <div>
+            <label class="payment-info__label">驗證密碼：
+              <input class="payment-info__input" type="text" inputmode="numeric" placeholder="CVV" required>
+            </label>
+          </div>
+
+        </form>
+
+    </section>
+
+    <hr class="main__separator"/>
+
+    <div class="order-summary">
+      <p class="order-summary__total">總價：<span id="order_total">新台幣2000元</span></p>
+      <button class="order-summary__button">確認訂購並付款</button>
+    </div>
+
+  </main>
+
+  <footer class="footer" id="footer">
+    <div class="footer__copyright">COPYRIGHT © 2024 台北一日遊</div>
+  </footer>
+
+
+  <script type="module" src="/static/js/popup.js"></script>
+  <script type="module" src="/static/js/booking.js"></script>
+
 </body>
 </html>
