Complete the member center function

--- a/static/booking.html
+++ b/static/booking.html
@@ -16,6 +16,7 @@
         <nav class="header__navbar">
             <ul class="header__navbar-list">
               <li class="header__navbar-item" id="booking_cart">預定行程</li>
+              <li class="header__navbar-item" id="member_centre">會員中心</li> 
               <li class="header__navbar-item" id="login_or_signout"></li>
             </ul>
         </nav>
@@ -92,21 +93,18 @@
           <div class="payment-info__form-group">
             <label class="payment-info__label">卡片號碼：
               <div class="payment-info__input" id="card_number"></div>
-              <!-- <input class="payment-info__input" type="text" inputmode="numeric" placeholder="請輸入信用卡卡號" required> -->
             </label>
           </div>
 
           <div class="payment-info__form-group">
             <label class="payment-info__label">過期時間：
               <div class="payment-info__input" id="card_expiration_date"></div>
-              <!-- <input class="payment-info__input" type="text" inputmode="numeric" placeholder="MM / YY" required>  -->
             </label>
           </div>
 
           <div class="payment-info__form-group">
             <label class="payment-info__label">驗證密碼：
               <div class="payment-info__input" id="card_ccv"></div>
-              <!-- <input class="payment-info__input" type="text" inputmode="numeric" placeholder="CVV" required> -->
             </label>
           </div>
 
