--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
       <nav class="header__navbar">
           <ul class="header__navbar-list">
             <li class="header__navbar-item" id="booking_cart">預定行程</li>
+            <li class="header__navbar-item" id="member_centre">會員中心</li>
             <li class="header__navbar-item" id="login_or_signout"></li>
           </ul>
       </nav>
@@ -25,7 +26,6 @@
 
 <!--++目前首頁class名稱改成符合BEM的，只有以上Header的部分而已，以下都還沒-->
 
-<!-- __分隔！！！！！ -->
 
 <div class="popup popup--hidden" id="popup">
 
@@ -69,9 +69,6 @@
 </div>
 
 <div class="popup__overlay popup--hidden" id="popup_overlay"></div> 
-
-
-<!-- __分隔！！！！！ -->
 
 
 <header class="header2_layout">
