--- a/static/thankyou.html
+++ b/static/thankyou.html
@@ -16,14 +16,13 @@
         <nav class="header__navbar">
             <ul class="header__navbar-list">
               <li class="header__navbar-item" id="booking_cart">預定行程</li>
+              <li class="header__navbar-item" id="member_centre">會員中心</li> 
               <li class="header__navbar-item" id="login_or_signout"></li>
             </ul>
         </nav>
       </div>
     </div>
   </header>
-
-  <!-- __分隔！！！！！ -->
 
 <div class="popup popup--hidden" id="popup">
 
@@ -68,9 +67,6 @@
 
 <div class="popup__overlay popup--hidden" id="popup_overlay"></div> 
 
-
-<!-- __分隔！！！！！ -->
-
   <main class="main">
     
     <div class="main__image-container">
@@ -81,7 +77,7 @@
       行程預定成功<br/>
       您的訂單編號如下
     </div>
-    <div class="main__order-number" id="order_number">############</div>
+    <div class="main__order-number" id="order_number"></div>
     <div class="main__instructions">請記住此編號，或到會員中心查詢歷史訂單</div>
 
   </main>
