--- a/static/attraction.html
+++ b/static/attraction.html
@@ -16,6 +16,7 @@
         <nav class="header__navbar">
             <ul class="header__navbar-list">
               <li class="header__navbar-item" id="booking_cart">預定行程</li>
+              <li class="header__navbar-item" id="member_centre">會員中心</li>
               <li class="header__navbar-item" id="login_or_signout"></li>
             </ul>
         </nav>
@@ -23,7 +24,6 @@
     </div>
   </header>
 
-<!-- __分隔！！！！！ -->
 
 <div class="popup popup--hidden" id="popup">
 
@@ -67,9 +67,6 @@
 </div>
 
 <div class="popup__overlay popup--hidden" id="popup_overlay"></div> 
-
-
-<!-- __分隔！！！！！ -->
 
 
   <main class="main">
@@ -147,7 +144,6 @@
   <script type="module" src="/static/js/popup.js"></script>
   <script type="module" src="/static/js/attraction.js"></script>
   
-
 
 </body>
 </html>
